1- removed unwanted packages from the project, 2- Made contact form component and its styles, as well as its functionalaties(sending email vie Web3Form and sweetalert2), 3-Home Section - removed the svg and put img, merged with home-info div, corrected styles as well as created new style file for the background images to move because the file was too big

--- a/src/components/Contacts/Contacts.styles.css
+++ b/src/components/Contacts/Contacts.styles.css
@@ -1,5 +1,111 @@
 #contacts {
     min-height: 1000px;
     background-color: rgb(0, 46, 93);
-    ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.contacts-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contacts-title {
+    text-align: center;
+    padding-top: 2rem;
+    color: #fff;
+    padding-bottom: 12px;
+}
+
+.contacts-divider {
+    width: 3rem;
+    height: 2px;
+    background-color: #fff;
+}
+
+.contact-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-container .contact-form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 20px;
+}
+
+.contact-container .contact-form-container .contact-form {
+    margin: 25px;
+    padding: 25px 25px 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+}
+
+.contact-form h2 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.contact-form .input-box {
+    margin-top: 20px;
+}
+
+.contact-form .input-box .field {
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #ddd;
+    outline: none;
+    border-radius: 6px;
+    padding: 15px;
+    font-size: 16px;
+    color: #333;
+    margin-top: 8px;
+}
+
+.contact-form .input-box .mess {
+    height: 200px;
+    resize: none;
+}
+
+.contact-form button {
+    width: 100%;
+    height: 55px;
+    background: #f1ac3b;
+    border: none;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    color: #fff;
+    font-weight: 500;
+    margin-top: 25px;
+}
+
+.contact-form button:hover {
+    background: #bd8c3e
+}
+
+.loader {
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    display: inline-block;
+    border-top: 3px solid #FFF;
+    border-right: 3px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+  
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
