--- a/src/components/scroll-to-top/ScrollToTop.styles.css
+++ b/src/components/scroll-to-top/ScrollToTop.styles.css
@@ -6,6 +6,7 @@
     border-radius: 20px;
     border-style: none;
     color: #fff;
-    background-color: rgb(0, 46, 93);
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
     cursor: pointer;
 }
